For now just suppress the error